--- a/views/about.html
+++ b/views/about.html
@@ -87,6 +87,8 @@
 												<li><a href="/downloads">Downloads</a></li>
 											</ul>
 										</li>
+									<% } else if (username) { %>
+										<li><a href="/downloads">Downloads</a></li>
 									<% } %>
 								  <li>
 										<a href="/about">E-Office</a>
