--- a/views/blog/blog.html
+++ b/views/blog/blog.html
@@ -42,7 +42,7 @@
 			<div class="col-3 mr-auto">
 				<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
 				<a class="logo" href="/">
-					<img class="newappIcon" src="../images/talkteam_logo1.png"><%= lang %>
+					<img class="newappIcon" src="../images/talkteam_logo1.png">
 				</a>
 			</div>
 			<div class="col-2 col-sm-9 col-xs-9 col-auto">
@@ -165,10 +165,7 @@
 			</article>
 		<% } %>
 
-	<% if (username) { %>
-	  <div class="adminPanel">
-	    <a href="/toc">Configuration</a>
-	  </div>
+		<% if (username) { %>
 
 		<% } else if (admin) { %>
 			<article class="blog_post">
@@ -206,8 +203,9 @@
 				<div id="setAdmin" hidden="true">toggle setAdmin</div>
 			</div>
 
-		<% } else if (username) { %>
+		<% } else if ( username && !admin) { %>
 			<div class="adminPanel">
+				<a href="/toc">Configuration000</a>
 			</div>
 		<% } %>
 
