--- a/views/index.html
+++ b/views/index.html
@@ -123,7 +123,8 @@
 <div class="fluid-container">
 	<div class="row">
 		<div class="col">
-			<img class="bannerimg" src="images/silhoutte2.jpg">
+			<!-- <img class="bannerimg" src="images/silhoutte2.jpg"> -->
+			<img class="bannerimg" src="images/conference_room.png">
 		</div>
 	</div>
 </div>
