--- a/public/style/style.css
+++ b/public/style/style.css
@@ -31,10 +31,12 @@ body {
 }
 #wrap > header + .fluid-container .col {
 	box-shadow: inset 0 0px 12px black;
+	background:url('../images/conference_room.png')no-repeat center;
+	background-size:cover;
 }
 #wrap > header + .fluid-container {
 	max-height:600px;
-	min-height:200px;
+	min-height:400px;
 }
 .fluid-container {
 	overflow:hidden;
@@ -380,6 +382,7 @@ a.logo {
 	width:100%;
 	position: relative;
 	z-index: -1;
+	visibility:hidden;
 }
 .intro {
 	/* margin-top:-6rem; */
@@ -823,6 +826,9 @@ border-bottom:1px solid #ccc;
 
 // Extra large devices (large desktops, 1200px and up)
 @media (max-width: 1200px) {
+	#wrap > header + .fluid-container {
+			min-height: 500px;
+	}
 }
 
 @media (max-width: 992px) {
@@ -840,6 +846,9 @@ border-bottom:1px solid #ccc;
 
 /* // Medium devices (tablets, 768px and up) */
 @media (max-width: 768px) {
+	#wrap > header + .fluid-container {
+			min-height: 300px;
+	}
 	.intro h2,
 	.intro h3 {
 		font-size:20px;
@@ -879,6 +888,9 @@ border-bottom:1px solid #ccc;
 }
 
 @media (max-width: 500px) {
+	#wrap > header + .fluid-container {
+			min-height: 200px;
+	}
 	.adminPanel {right:10px;}
 	.adminPanel input,
 	.adminPanel a[href="/toc"] {
