--- a/public/style/style.css
+++ b/public/style/style.css
@@ -910,8 +910,12 @@ border-bottom:1px solid #ccc;
 	.blog_post pre {
 		margin:0;
 	}
-	.blog_post header, .blog_post .body, .blog_post footer {
+	.blog_post header,
+	.blog_post .body,
+	.blog_post footer {
 		padding:.25em;
+		padding-top:1em;
+		padding-bottom:1em;
 	}
 }
 
