--- a/views/index.html
+++ b/views/index.html
@@ -124,7 +124,8 @@
 	<div class="row">
 		<div class="col">
 			<!-- <img class="bannerimg" src="images/silhoutte2.jpg"> -->
-			<img class="bannerimg" src="images/conference_room.png">
+			<!-- <img class="bannerimg" src="images/apples-talkteam.png"> -->
+			<img class="bannerimg" src="images/apples-talkteam.png">
 		</div>
 	</div>
 </div>
