--- a/views/logout.html
+++ b/views/logout.html
@@ -123,7 +123,7 @@
 <div class="fluid-container">
 	<div class="row">
 		<div class="col">
-			<img class="bannerimg" src="images/silhoutte2.jpg">
+			<img class="bannerimg" style="visibility:hidden" src="images/silhoutte2.jpg">
 		</div>
 	</div>
 </div>
