--- a/views/register.html
+++ b/views/register.html
@@ -122,7 +122,7 @@
 <div class="fluid-container">
 	<div class="row">
 		<div class="col">
-			<img class="bannerimg" src="images/conference_room.png">
+			<img class="bannerimg" src="images/apples-talkteam.png">
 		</div>
 	</div>
 </div>
