--- a/views/index.html
+++ b/views/index.html
@@ -82,7 +82,7 @@
 						  <li><a href="/home">Home</a></li>
 							<% if (!username) { %>
 								<li>
-									<a href="/register">Register</a>
+									<a href="/register">Registreer</a>
 									<ul>
 										<li><a href="/downloads">Downloads</a></li>
 									</ul>
@@ -123,6 +123,9 @@
 <div class="fluid-container">
 	<div class="row">
 		<div class="col">
+			<a href="/register" class="banner_sticker">
+				Register for TalkTeam now !
+			</a>
 			<!-- <img class="bannerimg" src="images/silhoutte2.jpg"> -->
 			<!-- <img class="bannerimg" src="images/apples-talkteam.png"> -->
 			<img class="bannerimg" src="images/apples-talkteam.png">
