--- a/views/faq.html
+++ b/views/faq.html
@@ -82,7 +82,7 @@
 								  <li><a href="/home">Home</a></li>
 									<% if (!username) { %>
 										<li>
-											<a href="/register">Register</a>
+											<a href="/register">Registreer</a>
 											<ul>
 												<li><a href="/downloads">Downloads</a></li>
 											</ul>
@@ -217,7 +217,7 @@
 					<label for="form_subject">Subject:</label>
 					<select id="form_subject" name="form_subject" value="">
 						<option value="general">General</option>
-						<option value="personal"><p></p>ersonal</option>
+						<option value="personal"><p></p>Personal</option>
 						<option value="banking">Banking</option>
 						<option value="technical">Technical</option>
 					</select>
