--- a/views/logout.html
+++ b/views/logout.html
@@ -82,7 +82,7 @@
 								  <li><a href="/home">Home</a></li>
 									<% if (!username) { %>
 										<li>
-											<a href="/register">Register</a>
+											<a href="/register">Registreer</a>
 											<ul>
 												<li><a href="/downloads">Downloads</a></li>
 											</ul>
@@ -123,7 +123,9 @@
 <div class="fluid-container">
 	<div class="row">
 		<div class="col">
-			<img class="bannerimg" style="visibility:hidden" src="images/silhoutte2.jpg">
+			<!-- <img class="bannerimg" style="visibility:hidden" src="images/silhoutte2.jpg"> -->
+			<img class="bannerimg" style="visibility: hidden" src="images/apples-talkteam.png">
+
 		</div>
 	</div>
 </div>
