--- a/views/terms.html
+++ b/views/terms.html
@@ -82,7 +82,7 @@
 								  <li><a href="/home">Home</a></li>
 									<% if (!username) { %>
 										<li>
-											<a href="/register">Register</a>
+											<a href="/register">Registreer</a>
 											<ul>
 												<li><a href="/downloads">Downloads</a></li>
 											</ul>
