Edit views for translated menu

--- a/views/blog/blog.html
+++ b/views/blog/blog.html
@@ -37,90 +37,90 @@
 <body>
 	<div id="wrap">
 
-<header class = "fluid-container">
-	<div class="container">
-		<div class="row">
-			<div class="col-3 mr-auto">
-				<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
-				<a class="logo" href="/">
-					<img class="newappIcon" src="../images/talkteam_logo1.png">
-				</a>
-			</div>
-			<div class="col-2 col-sm-9 col-xs-9 col-auto">
-				<% if (typeof lang == 'undefined' || lang == 'en') { %>
-				<div class="mobile-lang">
-					<a href="/?clang=nl"><img src="../images/nl.png" alt="Dutch flag" height="34" width="34"></a>
-				</div>
-				<% } else if (lang == 'nl') { %>
-					<div class="mobile-lang">
-						<a href="/?clang=en"><img src="../images/en.png" alt="British flag" height="34" width="34"></a>
+		<header class = "fluid-container">
+			<div class="container">
+				<div class="row">
+					<div class="col-3 mr-auto">
+						<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
+						<a class="logo" href="/">
+							<img class="newappIcon" src="images/talkteam_logo1.png">
+						</a>
 					</div>
-				<% } %>
-				<a id="hamburger" href="#mainmenu"></a>
-				<nav id="mainmenu">
-					<ul>
+					<div class="col-2 col-sm-9 col-xs-9 col-auto">
 						<% if (typeof lang == 'undefined' || lang == 'en') { %>
-						  <li><a href="/home">Home</a></li>
-							<% if (!username) { %>
-								<li>
-									<a href="/register">Register</a>
-									<ul>
-										<li><a href="/downloads">Downloads</a></li>
-									</ul>
-								</li>
-							<% } else if (username) { %>
-								<li><a href="/downloads">Downloads</a></li>
-							<% } %>
-						  <li>
-								<a href="/about">E-Office</a>
-								<ul>
-									<li><a href="/blog">Nieuws</a></li>
-									<li><a href="/faq">F.A.Q</a></li>
-									<li><a href="/terms">Algemene voorwaarde</a></li>
-								</ul>
-							</li>
+						<div class="mobile-lang">
+							<a href="/?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a>
+						</div>
 						<% } else if (lang == 'nl') { %>
-						  <li><a href="/home">Home</a></li>
-							<% if (!username) { %>
-								<li>
-									<a href="/register">Registreer</a>
-									<ul>
-										<li><a href="/downloads">Downloads</a></li>
-									</ul>
-								</li>
-							<% } else if (username) { %>
-								<li><a href="/downloads">Downloads</a></li>
-							<% } %>
-						  <li>
-								<a href="/about">E-Office</a>
-								<ul>
-									<li><a href="/blog">Nieuws</a></li>
-									<li><a href="/faq">F.A.Q</a></li>
-									<li><a href="/terms">Algemene voorwaarde</a></li>
-								</ul>
-							</li>
+							<div class="mobile-lang">
+								<a href="/?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a>
+							</div>
 						<% } %>
+						<a id="hamburger" href="#mainmenu"></a>
+						<nav id="mainmenu">
+							<ul>
+								<% if (typeof lang == 'undefined' || lang == 'en') { %>
+								  <li><a href="/home">Home</a></li>
+									<% if (!username) { %>
+										<li>
+											<a href="/register">Register</a>
+											<ul>
+												<li><a href="/downloads">Downloads</a></li>
+											</ul>
+										</li>
+									<% } else if (username) { %>
+										<li><a href="/downloads">Downloads</a></li>
+									<% } %>
+								  <li>
+										<a href="/about">E-Office</a>
+										<ul>
+											<li><a href="/blog">News</a></li>
+											<li><a href="/faq">F.A.Q</a></li>
+											<li><a href="/terms">Terms & Conditions</a></li>
+										</ul>
+									</li>
+								<% } else if (lang == 'nl') { %>
+								  <li><a href="/home">Home</a></li>
+										<% if (!username) { %>
+											<li>
+												<a href="/register">Registreer</a>
+												<ul>
+													<li><a href="/downloads">Downloads</a></li>
+												</ul>
+											</li>
+										<% } else if (username) { %>
+											<li><a href="/downloads">Downloads</a></li>
+										<% } %>
+								  <li>
+										<a href="/about">E-Office</a>
+										<ul>
+											<li><a href="/blog">Nieuws</a></li>
+											<li><a href="/faq">F.A.Q</a></li>
+											<li><a href="/terms">Algemene voorwaarde</a></li>
+										</ul>
+									</li>
+								<% } %>
 
-						<% if (typeof lang == 'undefined' || lang == 'en') { %>
-							<li class="lang"><a href="?clang=nl"><img src="images/nl.png" title="Translate to: Dutch" alt="Dutch flag" height="34" width="34"></a></li>
-						<% } else if (lang == 'nl') { %>
-							<li class="lang"><a href="?clang=en"><img src="images/en.png" title="Vertaal naar: Engels" alt="British flag" height="34" width="34"></a></li>
-						<% } %>
-					</ul>
-				</nav>
-				<div class="login">
-					<% if (username) { %>
-						<a id="logoutButton" href="/logout" style="margin-right: -4px">Logout</a>
-					<% } %>
-					<% if (!username) { %>
-						<a id="loginButton" href="/login">Login</a>
-					<% } %>
+								<% if (typeof lang == 'undefined' || lang == 'en') { %>
+									<li class="lang"><a href="?clang=nl"><img src="images/nl.png" title="Translate to: Dutch" alt="Dutch flag" height="34" width="34"></a></li>
+								<% } else if (lang == 'nl') { %>
+									<li class="lang"><a href="?clang=en"><img src="images/en.png" title="Vertaal naar: Engels" alt="British flag" height="34" width="34"></a></li>
+								<% } %>
+							</ul>
+						</nav>
+						<div class="login">
+							<% if (username) { %>
+								<a id="logoutButton" href="/logout" style="margin-right: -4px">Logout</a>
+							<% } %>
+							<% if (!username) { %>
+								<a id="loginButton" href="/login">Login</a>
+							<% } %>
+						</div>
+					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-</header>
-
+		</header>
+		
 <div class="fluid-container">
 	<div class="row">
 		<div class="col">
