--- a/views/register.html
+++ b/views/register.html
@@ -40,6 +40,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-3 mr-auto">
+						<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
 						<a class="logo" href="/">
 							<img class="newappIcon" src="images/talkteam_logo1.png">
 						</a>
@@ -47,11 +48,11 @@
 					<div class="col-2 col-sm-9 col-xs-9 col-auto">
 						<% if (typeof lang == 'undefined' || lang == 'en') { %>
 						<div class="mobile-lang">
-							<a href="?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a>
+							<a href="/?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a>
 						</div>
 						<% } else if (lang == 'nl') { %>
 							<div class="mobile-lang">
-								<a href="?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a>
+								<a href="/?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a>
 							</div>
 						<% } %>
 						<a id="hamburger" href="#mainmenu"></a>
@@ -72,23 +73,23 @@
 								  <li>
 										<a href="/about">E-Office</a>
 										<ul>
-											<li><a href="/blog">Nieuws</a></li>
+											<li><a href="/blog">News</a></li>
 											<li><a href="/faq">F.A.Q</a></li>
-											<li><a href="/terms">Algemene voorwaarde</a></li>
+											<li><a href="/terms">Terms & Conditions</a></li>
 										</ul>
 									</li>
 								<% } else if (lang == 'nl') { %>
 								  <li><a href="/home">Home</a></li>
-									<% if (!username) { %>
-										<li>
-											<a href="/register">Registreer</a>
-											<ul>
-												<li><a href="/downloads">Downloads</a></li>
-											</ul>
-										</li>
-									<% } else if (username) { %>
-										<li><a href="/downloads">Downloads</a></li>
-									<% } %>
+										<% if (!username) { %>
+											<li>
+												<a href="/register">Registreer</a>
+												<ul>
+													<li><a href="/downloads">Downloads</a></li>
+												</ul>
+											</li>
+										<% } else if (username) { %>
+											<li><a href="/downloads">Downloads</a></li>
+										<% } %>
 								  <li>
 										<a href="/about">E-Office</a>
 										<ul>
